--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,6 @@
 .footer {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: smaller;
+    font-size: x-small;
     margin-top: 30px;
     background-color: rgb(145, 243, 143);
     text-align: center;
